Tests/Conformance/Generated/Builtin/Constant/Array/IllTypedArray_02.lean
-- Auto-generated by gen_conformance_tests.py — do not edit manually.
import Tests.Conformance.ConformanceUtils
import PlutusCore.UPLC.ScriptEncoding.Basic

namespace Tests.Conformance.Generated.Builtin.Constant.Array.IllTypedArray_02

open Tests.Conformance

/-- error: Parsing error -/
#guard_msgs in
#conformance_import_uplc builtin_constant_array_illTypedArray_02 "../.plutus-conformance/plutus-conformance/test-cases/uplc/evaluation/builtin/constant/array/illTypedArray-02/illTypedArray-02.uplc"

end Tests.Conformance.Generated.Builtin.Constant.Array.IllTypedArray_02
